--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^16.18.52",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@types/react-transition-group": "^4.4.10",
     "compose-function": "^3.0.3",
     "nanoid": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -46,16 +48,13 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/compose-function": "^0.0.31",
-    "@types/node-sass": "^4.11.4",
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.2",
-    "node-sass": "^9.0.0",
     "react-bootstrap": "^2.8.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "redux-persist": "^6.0.0",
-    "sass": "^1.67.0",
-    "sass-loader": "^13.3.2"
+    "sass": "^1.67.0"
   }
 }
